--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,12 @@
             "assets": [
               "src/favicon.ico",
               "src/assets/icons",
+              "src/assets/fonts/Crimson_Text/CrimsonText-Regular.ttf",
+              "src/assets/fonts/Crimson_Text/CrimsonText-Italic.ttf",
+              "src/assets/fonts/Montserrat/static/Montserrat-Regular.ttf",
+              "src/assets/fonts/Montserrat/static/Montserrat-Italic.ttf",
+              "src/assets/fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf",
+              "src/assets/fonts/Playfair_Display/static/PlayfairDisplay-Italic.ttf",
               "src/manifest.json",
               "src/humans.txt"
             ],
@@ -96,6 +102,12 @@
             "assets": [
               "src/favicon.ico",
               "src/assets/icons",
+              "src/assets/fonts/Crimson_Text/CrimsonText-Regular.ttf",
+              "src/assets/fonts/Crimson_Text/CrimsonText-Italic.ttf",
+              "src/assets/fonts/Montserrat/static/Montserrat-Regular.ttf",
+              "src/assets/fonts/Montserrat/static/Montserrat-Italic.ttf",
+              "src/assets/fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf",
+              "src/assets/fonts/Playfair_Display/static/PlayfairDisplay-Italic.ttf",
               "src/manifest.json",
               "src/humans.txt"
             ],
