--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
               "src/styles.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/themes/lara-dark-purple/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           },
@@ -115,7 +116,8 @@
               "src/styles.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/themes/lara-dark-purple/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           }
