--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.1.3",
     "@angular/cli": "~15.1.3",
     "@angular/compiler-cli": "^15.1.0",
+    "@ngx-env/builder": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.14.0",
     "jasmine-core": "~4.5.0",
