--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Escribe tus api-keys obtenidas en 
-# https://openai.com/api/ y https://www.pexels.com/api/ 
-
+# https://openai.com/api/, https://www.pexels.com/api/, https://formspree.io/ 
 NG_OPENAI_API_KEY=
 NG_PEXEL_API_KEY=
+NG_FORMSPREE_ID=
