--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "normalize.css": "^8.0.1",
     "primeng": "^15.2.0",
