--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/primeng.min.css"
             ],
@@ -111,6 +112,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/primeng.min.css"
             ],
