--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "src/assets/i18n",
+              "src/assets/icons",
               "src/manifest.json",
               "src/humans.txt"
             ],
@@ -103,6 +105,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "src/assets/i18n",
+              "src/assets/icons",
               "src/manifest.json",
               "src/humans.txt"
             ],
