--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:prod": "ng build --configuration production --base-href https://hararecmg.github.io/hararec-website/",
+    "build:prod": "yarn ng build --configuration production --base-href https://hararecmg.github.io/hararec-website/ --aot --build-optimizer --optimization --output-path docs/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
