config: se agregan variables de entorno con ejemplos de valores en '.env.example'

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ NG_OPENAI_API_KEY=
 NG_OPENAI_ORGANIZATION_ID=
 NG_PEXEL_API_KEY=
 NG_FORMSPREE_ID=
-NG_SECONDS_IN_WHICH_MODAL_SALE_IS_DISPLAYED=
+NG_SECONDS_IN_WHICH_MODAL_SALE_IS_DISPLAYED=14
+DOCKER_DEV_USERNAME=mi_user_name
+DOCKER_DEV_IMAGENAME=mi_image_name
+DOCKER_DEV_TAG=1.0.0
